--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+cloudinary==1.44.1
 Django==5.2.5
+django-cloudinary-storage==0.3.0
 django-filter==25.1
 django-unfold==0.64.2
 djangorestframework==3.16.1
+idna==3.10
 pillow==11.3.0
 python-decouple==3.8
+python-magic==0.4.27
+requests==2.32.5
+six==1.17.0
 sqlparse==0.5.3
+urllib3==2.5.0
